css fix - overflow / elipsis etc css fix - z-indicies incorrect prep for better spreadsheet interactions.

--- a/src/components/PositionalBarplot.scss
+++ b/src/components/PositionalBarplot.scss
@@ -25,7 +25,7 @@
 
   .barplot-tooltip-holder{
     margin: 0;
-    z-index: 1002;
+    z-index: 1800;
   
     .bar-position-textblock {
       pointer-events: all;
