--- a/src/components/layout/AlignmentViewerLayout.scss
+++ b/src/components/layout/AlignmentViewerLayout.scss
@@ -8,7 +8,7 @@
   right: 0;
   opacity: 0;
   background-color: white;
-  z-index: 1800;
+  z-index: 1801;
   cursor: col-resize;
 }
 .full-screen-resize-dragger.horizontal{
